<?xml version="1.0" encoding="utf-8"?>

<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    app:umanoOverlay="true"
    app:umanoPanelHeight="@dimen/_45sdp"
    app:umanoShadowHeight="0dp"
    tools:context="com.example.librewards.ui.main.TimerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp">

        <TextView
            android:id="@+id/timerContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:background="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/timerPointsViewer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/points_box"
            android:contentDescription="@string/pointsHolderTimer"
            app:layout_constraintEnd_toEndOf="@+id/timerContainer"
            app:layout_constraintStart_toStartOf="@+id/timerContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usersPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pointsTimer"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/timerPointsViewer"
            app:layout_constraintStart_toStartOf="@+id/timerPointsViewer"
            app:layout_constraintTop_toTopOf="@+id/timerPointsViewer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/timerPointsViewer"
            app:layout_constraintStart_toStartOf="@+id/timerPointsViewer"
            app:layout_constraintTop_toBottomOf="@+id/usersPoints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/timerContainer"
            app:layout_constraintStart_toStartOf="@+id/timerContainer"
            app:layout_constraintTop_toBottomOf="@+id/timerPointsViewer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stopwatch"
                android:textAllCaps="true"
                android:textSize="@dimen/_10ssp" />

            <Chronometer
                android:id="@+id/stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:textColor="@color/colorVeryDarkGrey"
                android:textSize="@dimen/_64ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/map"
                android:textAllCaps="true"
                android:textSize="@dimen/_10ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_210sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_8sdp">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/googleMap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scanQrToStart"
                android:textAllCaps="true"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:background="@drawable/shadow">

        <View
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/qrCode"
            android:textAllCaps="true" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/qrCode"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/qrCode"
            android:elevation="@dimen/_7sdp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRoundedSquare" />

        <TextView
            android:id="@+id/qrCodeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:text="@string/qrCodeNumber"
            android:textColor="@color/colorDarkOrange"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
