...
        app:layout_constraintEnd_toEndOf="@+id/rewardsContainer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rewardsContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rewardsPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pointsRewards"
        android:textSize="32sp"
        android:textStyle="bold"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rewardsPointsViewer"
        app:layout_constraintStart_toStartOf="@+id/rewardsPointsViewer"
        app:layout_constraintTop_toBottomOf="@+id/rewardsPoints" />

    <TextView
        android:id="@+id/rewardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAllCaps="true"
        android:textSize="@dimen/_10sdp"
...
